[project]
name = "cuber-rl"
description = "A 3x3 Rubik's Cube Environment."
tags = ["puzzles", "cube", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3",
    "magiccube",
    "kociemba",
    "numpy"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["cuber_rl.py"]
